resolved the spacing issues

--- a/agile-frontend/WebContent/flatfull/css/core/2-app.css
+++ b/agile-frontend/WebContent/flatfull/css/core/2-app.css
@@ -1534,6 +1534,10 @@ body {
     display: block;
     font-weight: normal;
   }
+ .app-aside-dock nav>ul.nav {
+        margin: 0 auto;
+        width: 50%;
+  }
   .app-aside-dock li.dropdownnavbar {
 
         width: calc(100% - 67%);
@@ -1541,10 +1545,10 @@ body {
   .app-aside-dock .app-aside .navi > ul > li .nav-sub {
     position: absolute;
     top: auto !important;
-    left: 50%;
+    left: 0px;
     z-index: 1050;
     display: none;
-    width: calc(100% - 50%);
+    width: 200px;
     height: 0px !important;
     -webkit-box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
             box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
